--- a/package.json
+++ b/package.json
@@ -1,17 +1,38 @@
 {
   "name": "the-watcher",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.2",
+  "description": "The watcher, an AdventureJam2020 Game",
+  "main": "src/index.js",
   "scripts": {
-    "serve": "browser-sync start --watch --server src",
-    "dev": "npm run serve"
+    "build": "webpack --config webpack/prod.js ",
+    "start": "webpack-dev-server --config webpack/base.js --open"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ildede/the-watcher.git"
+  },
+  "author": "Davide Pedron <davide@happydev.cloud> (https://happydev.cloud)",
+  "license": "MIT",
+  "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
+  "bugs": {
+    "url": "https://github.com/ildede/the-watcher/issues"
+  },
+  "homepage": "https://github.com/ildede/the-watcher#readme",
   "devDependencies": {
-    "browser-sync": "^2.26.3"
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "raw-loader": "^3.1.0",
+    "terser-webpack-plugin": "^2.2.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "phaser": "^3.20.1"
+  }
 }
