--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "i18next-http-backend": "^1.0.7",
