--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "i18next": "^19.8.2",
-    "phaser": "^3.52.0",
-    "phaser3-rex-plugins": "^1.1.31"
+    "phaser": "3.24.1",
+    "phaser3-rex-plugins": "1.1.25"
   }
 }
