--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-watcher",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "The watcher, an AdventureJam2020 Game",
   "main": "src/index.js",
   "scripts": {
@@ -38,8 +38,8 @@
     "webpack-merge": "^5.1.3"
   },
   "dependencies": {
-    "i18next": "^19.8.2",
-    "phaser": "3.24.1",
-    "phaser3-rex-plugins": "1.1.25"
+    "i18next": "21.6.14",
+    "phaser": "3.55.2",
+    "phaser3-rex-plugins": "1.1.68"
   }
 }
